# web_app_react

./: .gitignore  PR_STORY.md  SKILL.md  TEST_COVERAGE.md  bash_scripts.md  main.py  package.json  pnpm-lock.yaml  prisma.config.ts  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  README.md  package.json  pyproject.toml
backend/prisma/: schema.prisma
backend/src/: config.py  main.py
backend/tests/: conftest.py  test_config.py  test_main.py
docs/pr-stories/: 001-environment-variables-and-secrets.md  README.md
docs/security-memos/: 00-memo-writing-guide.md  01-server-components-vulnerabilities.md
frontend/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
frontend/lib/: env.ts
frontend/src/: proxy.ts
